# Nichesphere

./: ..readthedocs.yaml.swp  .readthedocs.yaml  README.md  pyproject.toml
nichesphere/: Nichesphere_tutorial_PICseq.html  Nichesphere_tutorial_PICseq.ipynb  environment.yml  nichesphere_dev  nichesphere_install  nohup.out  pyproject.toml  requirements.txt
nichesphere/nichesphere/: __init__.py  coloc.py  comm.py  fake.py  main.py  silhouette.py  tl.py  tl_old.py
nichesphere/nichesphere/.ipynb_checkpoints/: tl-checkpoint.py  tl_old-checkpoint.py
nichesphere/nichesphere/docs/: nichesphere.rst  requirements.txt
nichesphere/nichesphere/source/: api.rst  coloc.rst  comm.rst  conf.py  index.rst  modules.rst  tl.py  tl.rst
nichesphere/nichesphere/source/API/: api.rst
nichesphere/tests/: Nichesphere_tutorial_4clusts_clean.ipynb  Nichesphere_tutorial_MIvisium.ipynb
nichesphere/tests/.ipynb_checkpoints/: Nichesphere_tutorial_4clusts_clean-checkpoint.ipynb
