[tool.poetry]
name = "nichesphere"
version = "0.1.0"
description = "bla"
authors = ["Mayra Ruiz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scanpy = "^1.10.4"
leidenalg = "^0.10.2"
pot = "^0.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
